# streaming-score-text

./: README.md  index.html  manual.md  package-lock.json
be/: pyproject.toml
be/be/: __main__.py  cache.py  server.py  stream.py  types.py
be/static/: index.html
fe/: .env.development  package-lock.json  package.json
fe/src/: App.tsx  types.ts
fe/src/hooks/: useLog.tsx  useNormalize.tsx  usePreference.tsx
