[tool.poetry]
name = "be"
version = "0.1.0"
description = ""
authors = ["Yasunori Horikoshi <hotoku@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.1"
click = "^8.1.6"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
aiohttp = "^3.8.5"
pandas = "^2.0.3"
pydantic = "^2.1.1"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
